--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
         
-        <span></span>
+        <span>COLUMBIARECORDS.COM</span>
 
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+        <img src="images/sony-logo.png">
 
       </div>
     </div>
